# pixel-graphics-lib

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README.md
.github/workflows/: main.yml
examples/: basic.rs  images.rs  layout_test.rs  menu_bar_test.rs  pre_post.rs  pre_post_w_controller.rs  relative_test.rs  relative_test2.rs  relative_test3.rs  relative_test4.rs  relative_test5.rs  scenes.rs  test_dialogs.rs  test_dialogs_w_controllers.rs  tilesets.rs  ui_test.rs  window_pos.rs
examples/resources/: icon.ici  large_icon.ici  num_set.json
src/: color.rs  drawing.rs  image.rs  lib.rs  scaling.rs  scenes.rs  text.rs  utilities.rs  window_prefs.rs
src/dialogs/: load_file_dialog.rs  mod.rs  save_file_dialog.rs
src/image_loading/: mod.rs  tilesets.rs
src/integration/: mod.rs  pixels_winit.rs  softbuffer_winit.rs  winit_app.rs
src/math/: contains.rs  core.rs  lerp.rs  mod.rs  traits.rs
src/math/traits/: cast_macros.rs  impls.rs  math_macros.rs  mod.rs
src/prefs/: mod.rs  preferences.rs
src/ui/: alert.rs  button.rs  checkbox.rs  dir_panel.rs  helpers.rs  icon_button.rs  label.rs  menu_bar.rs  menu_item_view.rs  mod.rs  text_field.rs  toggle_button.rs  toggle_icon_button.rs  tooltip.rs
src/ui/layout/: collection.rs  column.rs  mod.rs  relative.rs  row.rs
src/ui/styles/: defaults.rs  impls.rs  mod.rs
