[package]
name = "pixels-graphics-lib"
version = "0.17.1"
edition = "2021"
authors = ["Emma Britton <emmabritton@pm.me>"]
description = "Simple wrapper library around Pixels/Buffer Graphics"
license-file = "LICENSE"
repository = "https://github.com/emmabritton/pixel-graphics-lib"
readme = "README.md"
keywords = ["graphics", "gamedev", "pixels", "simple"]
categories = ["graphics", "game-development"]

[features]
default = ["window_prefs", "scenes", "sound", "serde"]
window_prefs = ["serde", "simple-game-utils/prefs"]
controller = ["serde", "simple-game-utils/controller"]
sound = ["simple-game-utils/sound"]
file_dialogs = ["directories"]
controller_xinput = ["serde", "simple-game-utils/controller_xinput"]
images = ["buffer-graphics-lib/image_loading"]
serde = ["dep:serde", "buffer-graphics-lib/serde", "simple-game-utils/serde", "winit/serde"]
mint = ["buffer-graphics-lib/mint"]
scenes = ["window_prefs"]
embedded = ["buffer-graphics-lib/embedded"]
notosans = ["buffer-graphics-lib/notosans"]

[dependencies]
pixels = "0.13.0"
winit = { version = "0.29.15", features = ["rwh_05"] }
winit_input_helper = { version = "0.16.0" }
thiserror = "1.0.58"
serde = { version = "1.0.197", features = ["derive"], optional = true }
directories = { version = "5.0.1", optional = true }
buffer-graphics-lib = { version = "0.16.2", default-features = false }
rustc-hash = "1.1.0"
simple-game-utils = { version = "0.4.2", default-features = false }

[dev-dependencies]
fastrand = "2.0.2"
anyhow = "1.0.81"

[[example]]
name = "test_dialogs"
required-features = ["file_dialogs"]

[[example]]
name = "test_dialogs_w_controllers"
required-features = ["file_dialogs", "controller"]

[[example]]
name = "images"
required-features = ["images"]

[[example]]
name = "pre_post_w_controller"
required-features = ["controller"]