[package]
name = "pixels-graphics-lib"
version = "0.20.2"
edition = "2021"
authors = ["Emma Britton <emmabritton@pm.me>"]
description = "Simple pixel graphics and GUI library"
license-file = "LICENSE"
repository = "https://github.com/emmabritton/pixel-graphics-lib"
readme = "README.md"
keywords = ["graphics", "gamedev", "pixels", "simple"]
categories = ["graphics", "game-development"]

[features]
default = ["window_prefs", "scenes", "sound", "serde"]
window_prefs = ["serde", "simple-game-utils/prefs"]
controller = ["serde", "simple-game-utils/controller"]
sound = ["simple-game-utils/sound"]
file_dialogs = ["directories"]
controller_xinput = ["serde", "simple-game-utils/controller_xinput"]
images = ["buffer-graphics-lib/image_loading"]
serde = ["dep:serde", "buffer-graphics-lib/serde", "simple-game-utils/serde"]
mint = ["buffer-graphics-lib/mint"]
scenes = ["window_prefs"]
embedded = ["buffer-graphics-lib/embedded"]
notosans = ["buffer-graphics-lib/notosans"]
pixels = ["dep:pixels", "winit_29", "winit_input_helper"]
softbuffer = ["dep:softbuffer", "winit_30", "window_prefs"]
pixels_serde = ["pixels", "serde", "winit_29/serde"]
softbuffer_serde = ["softbuffer", "serde", "winit_30/serde"]

[dependencies]
screen_size = "0.1.0"
pixels = { version = "0.14.0", optional = true }
winit_29 = { package = "winit", version = "0.29", features = ["rwh_05"], optional = true }
winit_30 = { package = "winit", version = "0.30", features = ["rwh_06"], optional = true }
softbuffer = { version = "0.4", optional = true }
winit_input_helper = { version = "0.16", optional = true }
thiserror = "1.0"
serde = { version = "1.0", features = ["derive"], optional = true }
directories = { version = "5.0", optional = true }
buffer-graphics-lib = { version = "0.19", default-features = false }
rustc-hash = "2.0"
simple-game-utils = { version = "0.5", default-features = false, features = ["ici"] }
log = "0.4"

[dev-dependencies]
fastrand = "2.1"
anyhow = "1.0"

[[example]]
name = "test_dialogs"
required-features = ["file_dialogs"]

[[example]]
name = "test_dialogs_w_controllers"
required-features = ["file_dialogs", "controller"]

[[example]]
name = "images"
required-features = ["images"]

[[example]]
name = "pre_post_w_controller"
required-features = ["controller"]

[package.metadata.docs.rs]
features = ["pixels"]