[package]
name = "pixels-graphics-lib"
version = "0.22.1"
edition = "2021"
authors = ["Emma Britton <emmabritton@pm.me>"]
description = "Simple pixel graphics and GUI library"
license-file = "LICENSE"
repository = "https://github.com/emmabritton/pixel-graphics-lib"
readme = "README.md"
keywords = ["graphics", "gamedev", "softbuffer", "simple", "pixels"]
categories = ["graphics", "game-development"]

[features]
default = ["window_prefs", "scenes", "sound", "serde"]
window_prefs = ["serde", "simple-game-utils/prefs"]
controller = ["serde", "simple-game-utils/controller"]
sound = ["simple-game-utils/sound"]
file_dialogs = ["directories"]
controller_xinput = ["serde", "simple-game-utils/controller_xinput"]
images = ["buffer-graphics-lib/image_loading"]
serde = ["dep:serde", "buffer-graphics-lib/serde", "simple-game-utils/serde", "winit/serde"]
mint = ["buffer-graphics-lib/mint"]
scenes = ["window_prefs"]
embedded = ["buffer-graphics-lib/embedded"]
notosans = ["buffer-graphics-lib/notosans"]

[dependencies]
winit = { version = "0.30", features = ["rwh_06"] }
softbuffer = { version = "0.4" }
thiserror = "2.0"
serde = { version = "1.0", features = ["derive"], optional = true }
directories = { version = "5.0", optional = true }
buffer-graphics-lib = { version = "0.19", default-features = false }
rustc-hash = "2.1"
simple-game-utils = { version = "0.5", default-features = false, features = ["ici"] }
log = "0.4"

[dev-dependencies]
fastrand = "2.3"
anyhow = "1.0"

[[example]]
name = "test_dialogs"
required-features = ["file_dialogs"]

[[example]]
name = "test_dialogs_w_controllers"
required-features = ["file_dialogs", "controller"]

[[example]]
name = "images"
required-features = ["images"]

[[example]]
name = "pre_post_w_controller"
required-features = ["controller"]
